# coupe

./: .dockerignore  .gitignore  .gitlab-ci.yml  .taplo.toml  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  coverage.sh  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
coupe/: Cargo.toml  all.html  enum.Error.html  enum.HilbertCurveError.html  fn.nextafter.html  index.html  sidebar-items.js  struct.ArcSwap.html  struct.AsMetadata.html  struct.BoundingBox.html  struct.CompleteKarmarkarKarp.html  struct.FiducciaMattheyses.html  struct.FmMetadata.html  struct.GraphGrowth.html  struct.Greedy.html  struct.Grid.html  struct.GridNeighbors.html  struct.HilbertCurve.html  struct.KMeans.html  struct.KarmarkarKarp.html  struct.KernighanLin.html  struct.MultiJagged.html  struct.Random.html  struct.Rcb.html  struct.Real.html  struct.Rib.html  struct.VnBest.html  struct.VnFirst.html  struct.ZCurve.html  trait.AsWeight.html  trait.Average.html  trait.CkkWeight.html  trait.FmWeight.html  trait.GreedyWeight.html  trait.KkWeight.html  trait.Partition.html  trait.RcbWeight.html  trait.Topology.html  trait.VnBestWeight.html  trait.VnFirstWeight.html  (+3 more)
coupe-ffi/: Cargo.toml  Doxyfile  Makefile
coupe-ffi/examples/: kk_fm.c
coupe-ffi/src/: data.rs  lib.rs
coupe/algorithms/: enum.Error.html  struct.Random.html
coupe/algorithms/arc_swap/: struct.ArcSwap.html  struct.Metadata.html  trait.AsWeight.html
coupe/algorithms/ckk/: struct.CompleteKarmarkarKarp.html  trait.CkkWeight.html
coupe/algorithms/fiduccia_mattheyses/: struct.FiducciaMattheyses.html  struct.Metadata.html  trait.FmWeight.html
coupe/algorithms/graph_growth/: struct.GraphGrowth.html
coupe/algorithms/greedy/: struct.Greedy.html  trait.GreedyWeight.html
coupe/algorithms/hilbert_curve/: enum.Error.html  struct.HilbertCurve.html
coupe/algorithms/k_means/: struct.KMeans.html
coupe/algorithms/kernighan_lin/: struct.KernighanLin.html
coupe/algorithms/kk/: struct.KarmarkarKarp.html  trait.KkWeight.html
coupe/algorithms/multi_jagged/: struct.MultiJagged.html
coupe/algorithms/recursive_bisection/: struct.Rcb.html  struct.Rib.html  trait.RcbWeight.html
coupe/algorithms/z_curve/: struct.ZCurve.html
coupe/average/: trait.Average.html
coupe/cartesian/: struct.Grid.html  struct.GridNeighbors.html
coupe/geometry/: struct.BoundingBox.html  type.Point2D.html  type.Point3D.html  type.PointND.html
coupe/imbalance/: fn.compute_parts_load.html  fn.imbalance.html  fn.imbalance_target.html  fn.max_imbalance.html  index.html  sidebar-items.js
coupe/nextafter/: fn.nextafter.html
coupe/num_traits/: enum.FloatErrorKind.html  fn.abs.html  fn.abs_sub.html  fn.cast.html  fn.checked_pow.html  fn.clamp.html  fn.clamp_max.html  fn.clamp_min.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html  index.html  struct.ParseFloatError.html  trait.AsPrimitive.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedNeg.html  trait.CheckedRem.html  trait.CheckedShl.html  trait.CheckedShr.html  trait.CheckedSub.html  trait.Float.html  trait.FloatConst.html  trait.FromPrimitive.html  trait.Inv.html  trait.MulAdd.html  trait.MulAddAssign.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumCast.html  trait.NumOps.html  trait.NumRef.html  trait.One.html  trait.Pow.html  trait.PrimInt.html  (+15 more)
coupe/num_traits/bounds/: index.html  trait.Bounded.html
coupe/num_traits/cast/: fn.cast.html  index.html  trait.AsPrimitive.html  trait.FromPrimitive.html  trait.NumCast.html  trait.ToPrimitive.html
coupe/num_traits/float/: index.html  trait.Float.html  trait.FloatConst.html  trait.FloatCore.html
coupe/num_traits/identities/: fn.one.html  fn.zero.html  index.html  trait.One.html  trait.Zero.html
coupe/num_traits/int/: index.html  trait.PrimInt.html
coupe/num_traits/ops/: index.html
coupe/num_traits/pow/: fn.checked_pow.html  fn.pow.html  index.html  trait.Pow.html
coupe/num_traits/real/: index.html  trait.Real.html
coupe/num_traits/sign/: fn.abs.html  fn.abs_sub.html  fn.signum.html  index.html  trait.Signed.html  trait.Unsigned.html
coupe/real/: struct.Real.html
coupe/src/: algorithms.rs  imbalance.rs  lib.rs  main.rs  nextafter.rs  real.rs  work_share.rs
coupe/src/algorithms/: ckk.rs  fiduccia_mattheyses.rs  graph_growth.rs  kernighan_lin.rs  multi_jagged.rs  recursive_bisection.rs
coupe/src/cartesian/: rcb.rs
coupe/src/topology/: mod.rs  sprs.rs
coupe/topology/: fn.adjacency_matrix.html  fn.edge_cut.html  fn.lambda_cut.html  index.html  sidebar-items.js  trait.Topology.html
examples/: Cargo.toml  balanced_k_means.yml  hilbert_curve.yml  k_means.yml  mesh_file.yml  multi_jagged.yml  rcb.yml  rib.yml  simple.rs  simplified_k_means.yml  xyz_mesh.yml
examples/meshes/: hole.mesh  tetrahedra.mesh  triangles.mesh
examples/src/: lib.rs
ffi/: Cargo.toml  Makefile  README.md
ffi/examples/: kk_fm.c  rcb.c
ffi/include/: coupe.h
ffi/src/: data.rs  lib.rs
ffi/wrap/: Cargo.toml
ffi/wrap/src/: lib.rs
mesh-io/: Cargo.toml
mesh-io-ffi/: Cargo.toml  meshio.h
mesh-io-ffi/src/: lib.rs
mesh-io/src/: lib.rs  partition.rs  vtk.rs  weight.rs
quality/: Cargo.toml  algorithms.toml
quality/src/: main.rs
tools/: Cargo.toml  Makefile  README.md  build.rs
tools/bins/: apply-part.rs  mesh-dup.rs  mesh-part.rs  mesh-points.rs  mesh-refine.rs  mesh-svg.rs  part-bench.rs  part-info.rs  weight-gen.rs
tools/doc/: apply-part.1.scd  apply-weight.1.scd  mesh-dup.1.scd  mesh-part.1.scd  mesh-points.1.scd  mesh-refine.1.scd  mesh-reorder.1.scd  mesh-svg.1.scd  part-bench.1.scd  part-info.1.scd  weight-gen.1.scd
tools/lib/: ittapi.rs  ittapi_stub.rs  lib.rs  metis.rs  scotch.rs  zoom_in.rs
tools/mesh-io/: Cargo.toml
tools/num-part/: Cargo.toml  README.md  help_after.txt  main.rs
tools/report/: common.sh  efficiency  efficiency-weak  imbedgecut.sh  perf  quality  weak-scaling
tools/src/: lib.rs  metis.rs  scotch.rs  zoom_in.rs
(+554 files in other folders)
