[workspace]
members = [
    ".",
    "ffi",
    "tools",
    "tools/mesh-io",
    "tools/mesh-io/ffi",
    "tools/num-part",
]

[package]
authors = [
    "Armand Touminet <armand.touminet@protonmail.com>",
    "Hubert Hirtz <hubert@hirtz.pm>",
    "Cédric Chevalier",
    "Sébastien Morais",
]
autobenches = false
categories = ["algorithms", "mathematics"]
description = """
Coupe is a mesh partitioning library. It implements composable
geometric and topologic algorithms.  
"""
edition = "2024"
keywords = ["mesh", "partitioning"]
license = "MIT OR Apache-2.0"
name = "coupe"
readme = "README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"
version = "0.1.0"

[features]
default = ["sprs"]

# Enable the nightly `stdsimd` feature and AVX512-accelerated algorithms.
# Requires rust nightly.
avx512 = []

[dependencies]
approx = "0.5.1"
itertools = "0.14.0"
ittapi = "0.5.0"
nalgebra = { version = "0.34.1", default-features = false, features = [
    "rand",
    "std",
] }
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
sprs = { version = "0.11.4", optional = true, default-features = false, features = [
    "multi_thread",
] }
tracing = { version = "0.1.43", default-features = false, features = ["std"] }

[dev-dependencies]
core_affinity = "0.8.3"
criterion = "0.8.0"
num_cpus = "1.17.0"
proptest = { version = "1.9.0", default-features = false, features = [
    "std",
    "timeout",
] }
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
tracing-tree = "0.4.1"


[[bench]]
harness = false
name    = "rcb_cartesian"
