[workspace]
members  = ["coupe", "coupe-ffi", "mesh-io", "mesh-io-ffi", "tools"]
resolver = "3"

[workspace.package]
authors = [
    "Armand Touminet <armand.touminet@protonmail.com>",
    "Hubert Hirtz <hubert@hirtz.pm>",
    "Cédric Chevalier",
    "Sébastien Morais",
]
categories = ["algorithms", "mathematics"]
description = "coupe, a parallel mesh partitioning library"
edition = "2024"
keywords = ["mesh", "partitioning"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"
version = "0.1.0"


[workspace.dependencies]
# members
coupe       = { version = "0.1.0", path = "./coupe" }
coupe-ffi   = { version = "0.1.0", path = "./coupe-ffi" }
mesh-io     = { version = "0.1.0", path = "./mesh-io" }
mesh-io-ffi = { version = "0.1.0", path = "./mesh-io-ffi" }
tools       = { version = "0.1.0", path = "./tools" }

# deps
anyhow = { version = "1", default-features = false, features = ["std"] }
approx = "0.5.1"
core_affinity = "0.8.3"
criterion = { version = "0.8.0", default-features = false }
getopts = { version = "0.2", default-features = false }
itertools = { version = "0.14.0", default-features = false }
ittapi = "0.5.0"
metis = "0.2"
nalgebra = { version = "0.34.1", default-features = false, features = [
    "rand",
    "std",
] }
num-traits = "0.2.19"
num_cpus = "1.17.0"
once_cell = "1.21"
proptest = { version = "1.9.0", default-features = false, features = [
    "std",
    "timeout",
] }
rand = { version = "0.9.2", default-features = false }
rand_distr = { version = "0.5.1", default-features = false }
rand_pcg = { version = "0.9.0", default-features = false }
rayon = "1.11.0"
rusqlite = { version = "0.38.0", default-features = false }
scotch = "0.2.1"
sprs = { version = "0.11.4", default-features = false, features = [
    "multi_thread",
] }
tracing = { version = "0.1.43", default-features = false, features = ["std"] }
tracing-chrome = { version = "0.7.2", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
tracing-tree = { version = "0.4.1", default-features = false }
vtkio = { version = "0.6", default-features = false }
