[package]
name = "examples"
version = "0.1.0"
authors = [
    "Armand Touminet <armand.touminet@protonmail.com>", 
    "Cédric Chevalier", 
    "Sébastien Morais"
]
edition = "2018"
publish = false

[dependencies]
coupe = { version = "0.1.0", path = "../" }
clap = { version = "2.32.0", features = ["yaml"]}
failure = "0.1.3"
gnuplot = "0.0.26"
itertools = "0.7.8"
rayon = "1.0.3"
rand = "0.5.5"
snowflake = "1.2"

mesh_io = { path = "../../mesh_io" }
