[package]
name = "examples"
version = "0.1.0"
authors = [
    "Armand Touminet <armand.touminet@protonmail.com>", 
    "Cédric Chevalier", 
    "Sébastien Morais"
]
edition = "2018"
publish = false

[dependencies]
coupe = { version = "0.1", path = "../" }
clap = { version = "2.33", features = ["yaml"]}
failure = "0.1"
gnuplot = "0.0.35"
itertools = "0.10"
rayon = "1.3"
rand = "0.8"
snowflake = "1.3"
sprs = { version = "0.11", default-features = false, features = ["multi_thread"] }

mesh_io = { path = "../../mesh_io" }
