[package]
name = "coupe-ffi"
version = "0.1.0"
edition = "2021"
description = "C bindings to coupe"
license = "MIT OR Apache-2.0"
keywords = ["mesh", "partitioning"]
categories = ["algorithms", "mathematics"]
readme = "README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[lib]
name = "coupe"
doc = false # name conflicts with the rust lib
crate-type = [
    "cdylib",
    "staticlib",
]


[dependencies]
coupe = { version = "0.1", path = ".." }
wrap = { path = "wrap" }
