[package]
categories  = ["algorithms", "mathematics"]
description = "C bindings to coupe"
edition     = "2021"
keywords    = ["mesh", "partitioning"]
license     = "MIT OR Apache-2.0"
name        = "coupe-ffi"
readme      = "README.md"
repository  = "https://github.com/LIHPC-Computational-Geometry/coupe"
version     = "0.1.0"


[lib]
crate-type = ["cdylib", "staticlib"]
doc        = false                   # name conflicts with the rust lib
name       = "coupe"


[dependencies]
coupe = { version = "0.1", path = ".." }
