[package]
name = "coupe-tools"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
description = "Tools to work with coupe from the command line"
license = "MIT OR Apache-2.0"
keywords = ["cli", "mesh", "partitioning"]
categories = ["algorithms", "command-line-utilities", "mathematics"]
readme = "README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[features]
default = []

# Integrate with Intel performance tools
# See tools/README.md for details.
intel-perf = ["dep:ittapi"]

# Add METIS partitioning procedures as algorithms
metis = ["dep:metis"]

# Add SCOTCH partitioning procedures as algorithms
scotch = ["dep:scotch"]


[dependencies]

# Partitioners
coupe = { version = "0.1", path = ".." }
scotch = { version = "0.1", optional = true }
metis = { version = "0.1", optional = true }

# Better tracing and profiling in Intel tools
ittapi = { version = "0.4", optional = true }

# Random number generation
rand = { version = "0.8", default-features = false, features = ["std"] }
rand_pcg = { version = "0.3", default-features = false }

# Mesh formats
mesh-io = { path = "mesh-io", version = "0.1" }

# Command-line interface
getopts = { version = "0.2", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }

# Debug output
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "std"] }
tracing-chrome = { version = "0.7", default-features = false }
tracing-tree = { version = "0.3", default-features = false }

# Benchmark framework
criterion = { version = "0.3", default-features = false }

# Other utilities
itertools = { version = "0.12", default-features = false }
once_cell = "1"
rayon = "1"
num_cpus = "1"
core_affinity = "0.8"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
