[package]
authors     = ["Hubert Hirtz <hubert@hirtz.pm>"]
categories  = ["algorithms", "command-line-utilities", "mathematics"]
description = "Tools to work with coupe from the command line"
edition     = "2021"
keywords    = ["cli", "mesh", "partitioning"]
license     = "MIT OR Apache-2.0"
name        = "coupe-tools"
readme      = "README.md"
repository  = "https://github.com/LIHPC-Computational-Geometry/coupe"
version     = "0.1.0"


[features]
default = []

# Integrate with Intel performance tools
# See tools/README.md for details.
intel-perf = ["dep:ittapi"]

# Add METIS partitioning procedures as algorithms
metis = ["dep:metis"]

# Add SCOTCH partitioning procedures as algorithms
scotch = ["dep:scotch"]


[dependencies]

# Partitioners
coupe  = { version = "0.1", path = ".." }
metis  = { version = "0.1", optional = true }
scotch = { version = "0.2", optional = true }

# Better tracing and profiling in Intel tools
ittapi = { version = "0.4", optional = true }

# Random number generation
rand     = { version = "0.9.2", default-features = false, features = ["std"] }
rand_pcg = { version = "0.9.0", default-features = false }

# Mesh formats
mesh-io = { path = "mesh-io", version = "0.1" }

# Command-line interface
anyhow  = { version = "1", default-features = false, features = ["std"] }
getopts = { version = "0.2", default-features = false }

# Debug output
tracing-chrome = { version = "0.7", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "std",
] }
tracing-tree = { version = "0.3", default-features = false }

# Benchmark framework
criterion = { version = "0.5", default-features = false }

# Other utilities
core_affinity = "0.8"
itertools     = { version = "0.12", default-features = false }
num_cpus      = "1"
once_cell     = "1"
rayon         = "1"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
