[package]
edition.workspace    = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

authors     = ["Hubert Hirtz <hubert@hirtz.pm>"]
categories  = ["algorithms", "command-line-utilities", "mathematics"]
description = "Tools to work with coupe from the command line"
keywords    = ["cli", "mesh", "partitioning"]
name        = "coupe-tools"

[lib]
path = "./lib/lib.rs"

[[bin]]
name = "num-part"
path = "./num-part/main.rs"

[[bin]]
name = "apply-part"
path = "./bins/apply-part.rs"
[[bin]]
name = "apply-weight"
path = "./bins/apply-weight.rs"
[[bin]]
name = "mesh-dup"
path = "./bins/mesh-dup.rs"
[[bin]]
name = "mesh-part"
path = "./bins/mesh-part.rs"
[[bin]]
name = "mesh-points"
path = "./bins/mesh-points.rs"
[[bin]]
name = "mesh-refine"
path = "./bins/mesh-refine.rs"
[[bin]]
name = "mesh-reorder"
path = "./bins/mesh-reorder.rs"
[[bin]]
name = "mesh-svg"
path = "./bins/mesh-svg.rs"
[[bin]]
name = "part-bench"
path = "./bins/part-bench.rs"
[[bin]]
name = "part-info"
path = "./bins/part-info.rs"
[[bin]]
name = "weight-gen"
path = "./bins/weight-gen.rs"


[features]
default = []

# Integrate with Intel performance tools
# See tools/README.md for details.
intel-perf = ["dep:ittapi"]

# Add METIS partitioning procedures as algorithms
metis = ["dep:metis"]

# Add SCOTCH partitioning procedures as algorithms
scotch = ["dep:scotch"]


[dependencies]

# Partitioners
coupe.workspace = true
metis           = { workspace = true, optional = true }
scotch          = { workspace = true, optional = true }

# Better tracing and profiling in Intel tools
ittapi = { workspace = true, optional = true }

# Random number generation
rand       = { workspace = true, default-features = false, features = ["std"] }
rand_distr = { workspace = true, default-features = false, features = ["std"] }
rand_pcg   = { workspace = true, default-features = false }

# Mesh formats
mesh-io.workspace = true

# Command-line interface
anyhow  = { workspace = true, default-features = false, features = ["std"] }
getopts = { workspace = true, default-features = false }

# Debug output
tracing-chrome = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "std",
] }
tracing-tree = { workspace = true, default-features = false }

# Benchmark framework
criterion.workspace = true

# SQLite interface to save experiments
rusqlite = { workspace = true, default-features = false }

# Other utilities
core_affinity.workspace = true
itertools               = { workspace = true, default-features = false }
num_cpus.workspace      = true
once_cell.workspace     = true
rayon.workspace         = true

[dev-dependencies]
proptest = { workspace = true, default-features = false, features = ["std"] }
