[package]
name = "mesh-io"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
description = "(de)serializing library for various mesh formats"
license = "MIT OR Apache-2.0"
keywords = ["mesh", "parser"]
categories = ["mathematics", "parsing"]
readme = "../README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[dependencies]
itertools = "0.10"
