[package]
name = "mesh-io"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
description = "(de)serializing library for various mesh formats"
license = "MIT OR Apache-2.0"
keywords = ["mesh", "parser"]
categories = ["mathematics", "parsing"]
readme = "../README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[features]
default = ["vtk-legacy"]

# File format: VTK (legacy)
vtk-legacy = ["vtkio"]

# Read from and write to compressed mesh files
compression = ["vtkio?/compression"]


[dependencies]
itertools = "0.10"

# VTK file formats
vtkio = { version = "0.6", default-features = false, optional = true }
