[package]
name = "num-part"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
description = "Command-line framework to measure quality of number-partitioning algorithms"
license = "MIT OR Apache-2.0"
keywords = ["cli", "partitioning"]
categories = ["algorithms", "command-line-utilities", "mathematics"]
readme = "../README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[dependencies]

# Algorithm parsing
coupe-tools = { path = "..", version = "0.1", default-features = false }
mesh-io = { path = "../mesh-io", version = "0.1" }

# Random number generation
rand = { version = "0.8", default-features = false, features = ["std"] }
rand_distr = { version = "0.4", default-features = false, features = ["std"] }
rand_pcg = { version = "0.3", default-features = false }
itertools = { version = "0.12", default-features = false }

# Partitioners
coupe = { version = "0.1", path = "../.." }

# SQLite interface to save experiments
rusqlite = { version = "0.26", default-features = false }

# Command-line interface
getopts = { version = "0.2", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }

# HTML reports TODO
