[package]
name = "mesh-io-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
description = "C bindings to mesh-io"
license = "MIT OR Apache-2.0"
keywords = ["mesh", "parser"]
categories = ["mathematics", "parsing"]
readme = "../../README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/coupe"


[lib]
name = "meshio"
crate-type = ["cdylib", "staticlib"]


[dependencies]
mesh-io = { version = "0.1", path = ".." }
